--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,13 +14,31 @@ a {
 * {
   box-sizing: border-box;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.letterBox {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 2px;
+  border-radius: 5px;
+  padding: 5px 10px;
+  width: 30px;
+  height: 30px;
+  font-size: 20px;
+  font-weight: bold;
+}
+.wrongPlaceLetter {
+background-color: yellow;
+color: white;
+}
+.correctPlaceLetter {
+  background-color: green;
+  color: white;
+}
+.wrongLetter {
+  background-color: grey;
+  color: white;
+}
+.robotLetter {
+  background-color: white;
+  color: black;
 }
